Add api for update quiz question for a note
