# open_api_docs.yaml
@@ -850,6 +850,35 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/QuizQuestionAndAnswer"
+    patch:
+      tags:
+      - rest-quiz-question-controller
+      operationId: updateQuestion
+      parameters:
+      - name: note
+        in: path
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/QuizQuestionAndAnswer"
+        required: true
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/QuizQuestionAndAnswer"
   /api/quiz-questions/generate-question:
     post:
       tags:
